fix spacing under image on 576 media query

--- a/src/pages/App/App2.css
+++ b/src/pages/App/App2.css
@@ -117,7 +117,7 @@ ul {
     margin-left: 10%;
   }
   .form-container {
-    margin-top: 8%;
+    margin-top: 3%;
     display: flex;
     flex-direction: column;
   }
